# c-basic

./: CMakeLists.txt  README.md
include/: algebra.h
test/: CMakeLists.txt  a.out  d_integral.c  eryibai.c  exp.c  file.c  gedebahe.c  genhao.c  gongyinshu.c  half.c  hanoi.c  hello  hello.c  kuaisu.c  leixing.c  maopao.c  matrix.c  mofang.c  newhalf.c  newshape.c  niudun.c  paixu.c  pde.c  qinmishu.c  shape.c  shuixianhua.c  sushu.c  test.c  test1.c  wanshu.c  xuanzhuan.c  years.c  yuesefu.c  zhizhen.c  zuoan.c
