add_executable(hello hello.c)
add_executable(test1 test1.c)
add_executable(newhalf newhalf.c)

add_executable(gedebahe gedebahe.c)

add_executable(leixing leixing.c)

add_executable(zuoan zuoan.c)

add_executable(eryibai eryibai.c)

add_executable(zhizhen zhizhen.c)

add_executable(mofang mofang.c)

add_executable(matrix matrix.c)

add_executable(maopao maopao.c)

add_executable(paixu paixu.c)

add_executable(kuaisu kuaisu.c)

add_executable(yuesefu yuesefu.c)

add_executable(xuanzhuan xuanzhuan.c)

add_executable(niudun niudun.c)
target_link_libraries(niudun  m)

add_executable(gongyinshu gongyinshu.c)
target_link_libraries(gongyinshu  m)

add_executable(genhao genhao.c)
target_link_libraries(genhao  m)

add_executable(exp exp.c)
target_link_libraries(exp  m)

add_executable(d_integral d_integral.c)
target_link_libraries(d_integral  m)

add_executable(shuixianhua shuixianhua.c)
target_link_libraries(shuixianhua  m)

add_executable(test test.c)
target_link_libraries(test  m)

add_executable(qinmishu qinmishu.c)
target_link_libraries(qinmishu  m)

add_executable(wanshu wanshu.c)

add_executable(sushu sushu.c)
target_link_libraries(sushu  m)


add_executable(half half.c)
target_link_libraries(half  m)

add_executable(pde pde.c)
target_link_libraries(pde  m)

add_executable(file file.c)

add_executable(shape shape.c)

add_executable(newshape newshape.c)


